--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -106,45 +106,22 @@ body {
     line-height: 1.5
   }
 
-  .text-body {
-    @screen sm {
-      font-size: 18rem;
-      line-height: 25rem;
-    }
-    @screen lg {
-      font-size: 20rem;
-      line-height: 28rem;
-    }
+  .text-body-large {
+    font-size: 16rem;
+    line-height: 1.5;
   }
 
-  .text-body {
-    @screen sm {
-      font-size: 18rem;
-      line-height: 26rem;
-    }
-    @screen lg {
-      font-size: 20rem;
-      line-height: 28rem;
-    }
+  .text-body-medium {
+    font-size: 14rem;
+    line-height: 1.5;
   }
-
-  .text-paragraph {
-    @screen sm {
-      font-size: 16rem;
-      line-height: 26rem;
-    }
-    @screen lg {
-      font-size: 18rem;
-      line-height: 28rem;
-    }
-  }
-
-  .text-caption {
-    font-weight: 500;
+  .text-body-small {
+    font-size: 12rem;
+    line-height: 1.5;
   }
 
   .text-gradient-1 {
-    @apply bg-gradient-1;
+    @apply bg-brand-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -164,8 +141,9 @@ body {
 .text-h2 {}
 .text-h3 {}
 .text-h4 {}
-.text-body {}
-.text-paragraph {}
-.text-caption {}
+.text-subtitle {}
+.text-body-large {}
+.text-body-medium {}
+.text-body-small {}
 .text-gradient-1 {}
 .width-container {}
